--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "morethan-log",
   "version": "1.3.0",
+  "packageManager": "yarn@1.22.22",
   "license": "MIT",
   "repository": {
     "type": "git",
