--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "start": "next start",
     "postbuild": "next-sitemap --config next-sitemap.config.js",
     "export": "cross-env EXPORT=true next build && next-sitemap --config next-sitemap.config.js",
+    "bundle-report": "cross-env ANALYZE=true next build",
+    "build-all-in-dev": "cross-env VERCEL_ENV=production next build",
     "lint": "next lint"
   },
   "dependencies": {
